Menu de hamburguesa, y logo agregados

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </div>
 
     <div id="menu-screen" class="screen hidden">
+        <img src="logo.jpg" alt="Logo de MatHEasyGame or not?" class="logo-juego">
+        <div class="menu-screen-menu-hamburger">
+            <span class="span1"></span>
+            <span class="span2"></span>
+            <span class="span3"></span>
+        </div>
         <h1 class="title">MatHEasyGame or not?</h1>
         <div class="menu">
             <button id="startGameBtn" class="menu-btn">Jugar</button>
